--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes for extraordinary bread</h1>
     <ul>
         <li><a href="./recipes/banana_bread.html">Banana Bread</a></li>
-        <li><a href="./recipes/yourrecipe.html">placeholder</a></li>
-        <li><a href="./recipes/yourrecipe.html">placeholder</a></li>
+        <li><a href="./recipes/cinnamon_bread.html">Cinnamon Bread</a></li>
+        <li><a href="./recipes/lemon_blueberry_bread.html">Lemon Blueberry Bread</a></li>
       </ul>
-    
 </body>
 </html>
