--- a/recipes/cinnamon_bread.html
+++ b/recipes/cinnamon_bread.html
@@ -4,41 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cinnamon Bread</title>
 </head>
 
 <body>
-    <h1>Bread</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F30%2F20144-banana-banana-bread-mfs-60.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-        alt="xxxx Bread" width="20%" height="20%">
+    <h1>Cinnamon Bread</h1>
+    <img src="https://www.allrecipes.com/thmb/ffYbUiiAi5wIZmeEs33-OFBPvwM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6934cinnamon-bread-iChefMo4x3-5082977d80db40c3ae22bba07771ab95.jpg"
+        alt="Cinnamon Bread" width="20%" height="20%">
 
-    <p>xxxx</p>
+    <p>This cinnamon quick bread has a sweet cinnamon topping that's swirled into the batter for a marbled effect. It's
+        a delicious way to start your morning!</p>
 
-    <h2>xxxx Bread Ingredients</h2>
-    <p>xxxx:/p>
+    <h2>Cinnamon Bread Ingredients</h2>
+    <p>These are the ingredients you’ll need to make this cinnamon bread recipe:</p>
 
+    <h3>For the Bread</h3>
     <ul>
+        <li>all-purpose flour</li>
+        <li>white sugar</li>
         <li>
-            <strong>xxxxx:</strong> xxxxx
+            buttermilk
+        </li>
+        <li>
+            eggs
+        </li>
+        <li>
+            vegetable oil
+        </li>
+        <li>
+            vanilla extract
+        </li>
+        <li>
+            baking powder
+        </li>
+        <li>
+            ground cinnamon
+        </li>
+        <li>
+            salt
+        </li>
+        <li>
+            baking soda
         </li>
     </ul>
 
-    <h2>How to Make xxxx Bread</h2>
-    <p>xxxxxxxxxx:</p>
+    <h3>For the topping</h3>
+    <ul>
+        <li>white sugar</li>
+        <li>butter</li>
+        <li>margarine</li>
+        <li>ground cinnamon</li>
+    </ul>
+
+
+    <h2>How to Make Cinnamon Bread</h2>
+    <p>You’ll find the full, step-by-step recipe below — but here’s a brief overview of what you can expect when you
+        make homemade cinnamon bread: </p>
 
     <ol>
         <li>
-            xxxx
+            Make the batter and pour it into a prepared loaf pan.
         </li>
         <li>
-            xxxx
+            Make the topping and sprinkle it over the batter.
+        </li>
+        <li>
+            Use a paring knife to swirl batter for a marbled effect.
+        </li>
+        <li>
+            Bake until a toothpick comes out clean.
         </li>
     </ol>
 
-    <h2>How Long to Bake xxx Bread</h2>
-    <p>xxxxxx.
-    </p>
-
+    <h2>How to Store Cinnamon Bread</h2>
+    <p>Store the bread in a bread box, in a storage container, or wrapped in storage wrap at room temperature for up to
+        five days. Avoid refrigeration, as this will dry out the bread.</p>
 
     <p>
         <a href="../index.html">Back to Odin Recipes</a>
