--- a/recipes/lemon_blueberry_bread.html
+++ b/recipes/lemon_blueberry_bread.html
@@ -4,40 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lemon Blueberry Bread</title>
 </head>
 
 <body>
-    <h1>Bread</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F30%2F20144-banana-banana-bread-mfs-60.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-        alt="xxxx Bread" width="20%" height="20%">
+    <h1>Lemon Blueberry Bread</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1026061.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+        alt="Lemon Blueberry Bread" width="20%" height="20%">
 
-    <p>xxxx</p>
+    <p>This lemon blueberry bread is a family favorite. I drizzle a sweet and tangy glaze on top for a special treat.</p>
 
-    <h2>xxxx Bread Ingredients</h2>
-    <p>xxxx:/p>
+    <h2>Lemon Blueberry Bread Ingredients</h2>
+    <p>These are the basic ingredients you’ll need to make this sweet lemon blueberry bread recipe:</p>
 
+    <h3>For the bread:</h3>
     <ul>
-        <li>
-            <strong>xxxxx:</strong> xxxxx
-        </li>
+        <li>white sugar</li>
+        <li>melted butter</li>
+        <li>eggs</li>
+        <li>lemon juice</li>
+        <li>all-purpose flour</li>
+        <li>baking powder</li>
+        <li>salt</li>
+        <li>milk</li>
+        <li>blueberries (fresh or frozen)</li>
+        <li>walnuts (optional)</li>
+        <li>lemon zest</li>
     </ul>
 
-    <h2>How to Make xxxx Bread</h2>
-    <p>xxxxxxxxxx:</p>
+    <h3>For the glaze:</h3>
+    <ul>
+        <li>white sugar</li>
+        <li>lemon juice</li>
+    </ul>
+
+    <h2>How to Make Lemon Blueberry Bread</h2>
+    <p>You’ll find the full, step-by-step recipe below — but here’s a brief overview of what you can expect when you make homemade lemon blueberry bread:</p>
 
     <ol>
         <li>
-            xxxx
+            Beat the sugar, butter, eggs, and lemon juice together.
         </li>
         <li>
-            xxxx
+            Combine the dry ingredients in another bowl.
+        </li>
+        <li>
+            Stir the dry mixture into the egg mixture alternately with milk.
+        </li>
+        <li>
+            Fold in the berries, nuts, and zest.
+        </li>
+        <li>
+            Bake the bread until a toothpick comes out clean.
+        </li>
+        <li>
+            Make the glaze, then drizzle it over the warm bread.
         </li>
     </ol>
 
-    <h2>How Long to Bake xxx Bread</h2>
-    <p>xxxxxx.
-    </p>
+    <h2>How to Store Lemon Blueberry Bread</h2>
+    <p>Store lemon blueberry bread in an airtight container at room temperature for up to three days or in the fridge for up to five days.</p>
 
 
     <p>
